--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@ body,
     flex-direction: row; /*linha e coluna*/
     align-items: flex-end; /** se baseia na flex diretion **/
     justify-content: center;/*center flex-end space-between coloca spaço no meio space-around spaço no começo e no fim tbm*/
+    flex-wrap: wrap;/*quebra linha*/
+    align-content: center;
 }
 .box{
     width: 60px;
     height: 60px;
     margin: 5px;
     background: red;
+    flex: 1; /*flex - uniao dos dois -> flex-grow: 1; aceita ser aumentado flex-shrink expreme por padrao 0 */
 }
