--- a/APP2/style.css
+++ b/APP2/style.css
@@ -12,11 +12,23 @@ body{
 input, button{
     outline: 0;
 }
+.content {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 30px;
+}
 
 header#main-header {
+    height: 46px;
+    background: #fff;
+    box-shadow: 0 1px 1px rgba(0, 0, 0.25);
+}
+header#main-header .content{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%;
+
 }
 
 header#main-header nav ul {
@@ -50,19 +62,24 @@ header#main-header div.side img{
     height: 34px;
     width: 34px;
     border-radius: 50%;
+    margin: 0 15px;
 }
 /*Botão do input*/
 header#main-header div.side input{
-    background: #f5f8fa;
+    width: 220px;
     border: 1px solid #e6ecf0;
     height: 34px;
-    padding: 0 12px;
+    padding: 0 30px 0 12px;
     color: #667581;
     border-radius: 16px;
+    font-size: 12px;
+    background: #f5f8fa url('/APP2/images/search.svg') no-repeat 190px center ;
 }
 header#main-header div.side{
     display: flex;
+    
 }
+/*Botão do Twitter*/
 header#main-header div.side button{
     height: 34px;
     background: #3bb9e3;
@@ -77,7 +94,4 @@ header#main-header div.side button{
     color: #fff;
     border: 0;
     border-radius: 16px;
-}
-header#main-header div.side{
-    margin: 0 15px;
 }
